--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,13 +25,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 320px;
+  min-width: 300px;
   min-height: 100vh;
 }
 
 .main-content {
   height: 100%;
-  padding: 2rem;
+  padding: 0.1rem 2rem;
   width: 100%;
 }
 
