--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -17,8 +17,15 @@
     font-size: 1.2rem;
 }
 
+.nav-bar .search-bar {
+    flex-grow: 1;
+    position: relative;
+}
+
 .nav-bar .search-bar form {
     display: flex;
+    width: 90%;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
     gap: 5px;
@@ -26,7 +33,8 @@
 
 .nav-bar input {
     display: inline-block;
-    width: 300px;
+    width: 100%;
+    max-width: 350px;
     height: 35px;
     padding: 5px;
     border-radius: 5px;
@@ -53,7 +61,8 @@
 }
 
 .nav-bar .nav-links {
-    width: 200px;
+    width: 30%;
+    flex-shrink: 1;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -61,22 +70,44 @@
     gap: 10px;
 }
 
+@media screen and (max-width: 768px) {
+    .nav-bar .nav-links {
+        display: none;
+    }
+
+    .day-weather {
+        min-width: 200px;
+    }
+
+}
+
+
 .suggetions-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    width: 350px;
+    width: 80%;
     background-color: #4d4d4d;
     color: #ffffff;
     padding: 10px 20px;
     border-radius: 10px;
     position: absolute;
     top: 70px;
+    left: 50px;
     z-index: 1;
     overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+    .suggetions-div {
+        left: 0;
+        width: 100%;
+    }
+}
+
+
 
 .d-none {
     display: none;
